Refactor: single DuckDB sink in StreamingBatchConsumer; DuckDB COPY TO for Arrow export
- Remove PersistenceService hierarchy (PersistenceService, LocalFilePersistenceService,
  S3PersistenceService, PersistenceServiceFactory) from pgw-ingestor
- Remove ArrowBatchResult from pgw-ingestor (no longer needed)
- StreamingBatchConsumer: drop PersistenceService arg; single DuckDB sink only
  New constructor: StreamingBatchConsumer(DuckDBConnection conn, BufferAllocator allocator)
- App.java: replace PersistenceServiceFactory with DuckDB COPY TO (FORMAT arrow) after
  parsing; exports {baseName}_message.arrow, _remittance.arrow, _transaction.arrow
- PaymentRepositoryImpl: remove ArrowBatchResult constructor and loadViaStream/BatchArrowReader;
  keep only DuckDBConnection constructor
- pgw-ingestor/pom.xml: remove AWS SDK s3 dependency
- ArrowFileLoadBenchmarkTest: use DuckDB COPY TO + read_arrow() instead of
  LocalFilePersistenceService + ArrowStreamReader; .arrow extension (not .arrows)
- ValidationBenchmarkTest: same — generateArrowFiles() now uses DuckDB COPY TO;
  loading uses read_arrow(); .arrow extension
- ValidationTest: remove LocalFilePersistenceService; use new StreamingBatchConsumer(conn, allocator)
- StreamingPipelineTest: update constructor calls; replace LocalFilePersistenceService tests
  with DuckDB COPY TO export and read_arrow() verification
- MemoryLeakVerificationTest: remove LocalFilePersistenceService; simpler loop with
  new StreamingBatchConsumer(conn, allocator)
- README.md: update architecture diagram, module description, configuration, running commands

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>